# desktop

./: NEXTCLOUD.cmake  VERSION.cmake  theme.qrc.in
.github/workflows/: windows-build-and-test.yml
src/gui/: CMakeLists.txt
src/libsync/: theme.cpp
theme/: marchingegnocloud.VisualElementsManifest.xml
